# cosmicray-analysis-tools

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
crtemplate_analysis/: crtemplate_analysis.py
example/: example_template_fit.py
tests/: test_template_analysis.py
