[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crtemplate_analysis"
version = "0.1.0"
description = "Cosmic-ray mass-composition analysis via template PDF fitting"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Matthias Plum", email = "matthias.plum@sdsmt.edu" }]
requires-python = ">=3.9"
keywords = ["cosmic-ray", "mass-composition", "template-fit", "physics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21",
    "matplotlib>=3.4",
    "iminuit>=2.16",

]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov", "scipy"]

[project.urls]
Homepage = "https://github.com/matthiasplum/cosmicray-analysis-tools"
"Bug Tracker" = "https://github.com/matthiasplum/cosmicray-analysis-tools/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["crtemplate_analysis*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["crtemplate_analysis"]
